# xai4chem

./: README.md  pyproject.toml  requirements.txt  setup.py
assets/: evaluation_data.joblib  evaluation_metrics.json  evaluation_metrics.txt
assets/Mordred_all_features_default_params_False/: evaluation_data.joblib  evaluation_metrics.json
assets/Mordred_all_features_default_params_True/: evaluation_data.joblib  evaluation_metrics.json
assets/Mordred_select_features_default_params_False/: evaluation_data.joblib  evaluation_metrics.json
assets/Mordred_select_features_default_params_True/: evaluation_data.joblib  evaluation_metrics.json
assets/RDKit_all_features_default_params_False/: evaluation_data.joblib  evaluation_metrics.json
assets/RDKit_all_features_default_params_True/: evaluation_data.joblib  evaluation_metrics.json
assets/RDKit_select_features_default_params_False/: evaluation_data.joblib  evaluation_metrics.json
assets/RDKit_select_features_default_params_True/: evaluation_data.joblib  evaluation_metrics.json
data/: README.md  plasmodium_falciparum_3d7_ic50.csv
data/01_raw/: README.md  plasmodium_falciparum_3d7_assays.csv  plasmodium_falciparum_3d7_ic50.csv
notebooks/: evaluation_of _xgboost_and_catboost.ipynb  raw_data_cleaning.ipynb  train_and_plot_interpretability.ipynb
results/: evaluation_data.csv  evaluation_metrics.json  shap_values.csv  xgboost_1.joblib
scripts/: testing.py
xai4chem/: __init__.py  classifier.py  datamol_desc.py  explain_model.py  mordred_desc.py  morgan_desc.py  rdkit_fps.py  rdkitclassical_desc.py  regressor.py
(+24 files in other folders)
